fix alignment

--- a/client/src/Pages/DocDashboard/Profile/profile.module.css
+++ b/client/src/Pages/DocDashboard/Profile/profile.module.css
@@ -4,7 +4,12 @@
    padding: 1rem 1rem;
    border: 1px solid var(--gray);
    border-radius: 10px;
+   overflow-y: scroll;
 }
+
+/* .main::-webkit-scrollbar {
+   display: none;
+} */
 
 /* #profileBody {
    padding-top: 2rem;
