--- a/client/src/Pages/DocDashboard/Schedule/DoctorSchedule.module.css
+++ b/client/src/Pages/DocDashboard/Schedule/DoctorSchedule.module.css
@@ -4,7 +4,7 @@
    width: 60vw;
    height: 100vh;
    display: flex;
-justify-content: center;
+   justify-content: center;
 }
 .DSContainer {
    /* display: flex;
@@ -23,7 +23,7 @@ justify-content: center;
    padding: 20px;
    height: 100vh;
    min-height: 55rem;
-   justify-self: center
+   justify-self: center;
 }
 
 .DSContainer2 {
@@ -238,9 +238,7 @@ justify-content: center;
 .appointmentContainer .tdName {
    text-align: left;
 }
-.DSContainer h2 {
-   padding: 20px 0px;
-}
+
 .DSContainer2 h2 {
    color: #0d3f58;
    text-align: center;
@@ -262,11 +260,6 @@ justify-content: center;
    clip-path: circle();
 }
 @media (min-width: 2000px) {
-   .DSContainer {
-      width: 100rem;
-      margin: auto;
-      min-height: 71rem;
-   }
    .appointmentContainer {
       min-height: 25rem;
       height: 35rem;
@@ -345,12 +338,8 @@ justify-content: center;
    }
 }
 @media only screen and (max-width: 1200px) {
-   .DSContainer {
-      width: 78%;
-      margin-left: 15rem;
-   }
    .DSContainer1 {
-      width: 80%;
+      width: 100%;
       height: 93.5vh;
    }
 
@@ -361,10 +350,7 @@ justify-content: center;
    .DSContainer1 label {
       font-size: 1rem;
    }
-   .DSContainer h2 {
-      font-size: 1.2rem;
-      width: 100%;
-   }
+
    .DSContainer2 {
       grid-column: 1/2;
       width: 35%;
@@ -448,9 +434,16 @@ justify-content: center;
       width: 20%;
    }
 }
+
+@media (min-width: 768px) and (max-width: 800px) {
+   .DSContainer1 {
+      width: 170%;
+   }
+}
+
 /*smaller laptop screens*/
 @media (max-width: 1024px) {
-   .wrapper{
+   .wrapper {
       width: 100%;
    }
    .DSContainer {
@@ -476,15 +469,6 @@ justify-content: center;
 }
 /*Tablet Screens*/
 @media (max-width: 768px) {
-   .DSContainer {
-      margin: 0 auto;
-      display: grid;
-      width: 100%;
-      font-size: 1rem;
-      grid-template-columns: repeat(1, 1fr);
-      grid-template-rows: repeat(3, 1fr);
-      height: 112.5rem;
-   }
    .DSContainer1 {
       width: 100%;
       background-color: white;
@@ -525,16 +509,6 @@ justify-content: center;
 }
 /*Mobile screens*/
 @media (max-width: 425px) {
-   .DSContainer {
-      margin-left: 0;
-      display: grid;
-      width: 100%;
-      font-size: 1rem;
-      grid-template-columns: repeat(1, auto);
-      grid-template-rows: repeat(3, 1fr);
-      height: 106.25rem;
-      overflow-y: scroll;
-   }
    .DSContainer1 {
       width: 100%;
       background-color: white;
@@ -624,19 +598,6 @@ justify-content: center;
 
 /*small mobile screens*/
 @media (max-width: 375px) {
-   .DSContainer {
-      margin-left: 0;
-      display: grid;
-      width: 100%;
-      font-size: 1rem;
-      gap: 0;
-      grid-template-columns: repeat(1, 1fr);
-      grid-template-rows: 0.6fr 0.5fr 0.5fr;
-      margin-left: 0;
-      height: 112.5rem;
-      overflow-y: scroll;
-   }
-
    .DSContainer1 {
       width: 100%;
       background-color: white;
@@ -697,10 +658,6 @@ justify-content: center;
    }
 }
 @media (max-width: 320px) {
-   .DSContainer {
-      width: 100%;
-      margin: auto;
-   }
    .DSContainer1 form {
       margin: auto;
       width: 100%;
@@ -737,15 +694,3 @@ justify-content: center;
       padding: 0;
    }
 }
-
-/* @media (min-width: 1920px) {
-   .wrapper {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-   }
-
-   .DSContainer {
-      max-width: 1200px;
-   }
-} */
